<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_interfaces</name>
  <version>0.0.0</version>
  <description> 
    This package defines the custom ROS 2 message and service interfaces used in the 
    simulation. It includes the Turtle and TurtleArray messages for publishing 
    turtle data and the CatchTurtle service for removing turtles when they are caught
    by the master turtle.
  </description>
  <maintainer email="evillalba001@gmail.com">elena</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
